# animind

./: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
.kiro/specs/animal-emotion-recognition/: .config.kiro  design.md  requirements.md  tasks.md
android/app/: build.gradle
ios/: Podfile
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/data/services/: emotion_classifier_service_impl.dart  (+6 more)
test/: widget_test.dart
test/property/: classification_output_test.dart  history_roundtrip_test.dart  history_size_invariant_test.dart  input_policy_test.dart  preprocess_invariant_test.dart  result_formatting_test.dart  thumbnail_cache_cleanup_test.dart  uncertainty_detection_test.dart  validation_correctness_test.dart
test/unit/: emotion_classifier_test.dart  history_manager_test.dart  image_input_service_test.dart  image_validator_test.dart  memory_monitor_test.dart  preprocessor_service_test.dart  result_formatter_test.dart
test/widget/: analyzing_screen_test.dart  error_screen_test.dart  history_screen_test.dart  main_screen_test.dart  permission_screen_test.dart  result_screen_test.dart  uncertain_result_screen_test.dart
training/: __init__.py  data_augmentor.py  dedup_split.py  model_converter.py  model_trainer.py  pyproject.toml  run_pipeline.py  strip_softmax.py
training/tests/: test_augmentation_expansion.py  test_augmentation_no_leak.py  test_augmentation_target_filter.py  test_class_balance.py  test_data_augmentor.py  test_dedup_split.py  test_early_stopping.py  test_model_converter.py  test_model_trainer.py
(+31 files in other folders)
