[project]
name = "animind-training"
version = "0.1.0"
description = "동물 감정 인식 - Python 학습 파이프라인 (데이터 증강, MobileNetV2 학습, TFLite 변환)"
requires-python = ">=3.10"
dependencies = [
    "tensorflow>=2.15.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
test = [
    "hypothesis>=6.92.0",
    "pytest>=7.4.0",
]

[tool.uv]
dev-dependencies = [
    "hypothesis>=6.92.0",
    "pytest>=7.4.0",
]
